--- a/projectWood-server/.classpath
+++ b/projectWood-server/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/projectWood"/>
-	<classpathentry kind="lib" path="/projectWood/libs/kryonet-2.18-all.jar"/>
+	<classpathentry exported="true" kind="lib" path="/projectWood/libs/kryonet-2.18-all.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
